k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: silentcanary
  labels:
    name: silentcanary
    environment: production
